<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:background="@color/colorPrimaryDark"
        tools:context=".scoreCard">
        <TableRow>
            <EditText
                android:textColor="#000"
                android:textSize="25dp"
                android:id="@+id/course"
                android:layout_gravity="center"
                android:layout_span="3"
                android:hint="@string/Course"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_gravity="left"
                android:text="@string/holetitle"
                android:textColor="#000"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/p1"
                android:layout_gravity="center"
                android:hint="@string/Player1"
                android:textColor="#000"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/p2"
                android:layout_gravity="center"
                android:hint="@string/Player2"
                android:textColor="#000"
                android:textSize="25dp" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_gravity="left"
                android:text="@string/hole1"
                android:textColor="#000"
                android:textSize="25dp" />
            <EditText
                android:id="@+id/score1"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
            <EditText
                android:id="@+id/sc1"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>

            <TextView
                android:layout_gravity="left"
                android:text="@string/hole2"
                android:textColor="#000"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
            <EditText
                android:id="@+id/sc2"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole3"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc3"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole4"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc4"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole5"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc5"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole6"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc6"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole7"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc7"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole8"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc8"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole9"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc9"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>

            <TextView
                android:layout_gravity="left"
                android:text="@string/hole10"
                android:textColor="#000"
                android:textSize="25dp" />
            <EditText
                android:id="@+id/score10"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
            <EditText
                android:id="@+id/sc10"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>

            <TextView
                android:layout_gravity="left"
                android:text="@string/hole11"
                android:textColor="#000"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/score11"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
            <EditText
                android:id="@+id/sc11"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole12"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score12"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc12"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole13"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score13"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc13"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole14"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score14"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc14"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole15"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score15"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc15"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole16"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score16"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc16"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>

        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole17"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score17"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc17"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/hole18"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="left"
                />

            <EditText
                android:id="@+id/score18"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/scorehint"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/sc18"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:hint="@string/scorehint"
                android:paddingLeft="25dp"
                android:inputType="number"
                android:layout_height="50dp"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/submit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
            <TextView
                android:id="@+id/result"
                android:text="@string/overall"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="center"
                />
            <Button
                android:id="@+id/submit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
            <TextView
                android:id="@+id/result2"
                android:text="@string/overall"
                android:textSize="25dp"
                android:textColor="#000"
                android:layout_gravity="center"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/submitP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/Add" />
            <Button
                android:id="@+id/submitP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/ViewAll" />
        </TableRow>

    </TableLayout>
</ScrollView>
